--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
         <li><img src="imagens/linkedin.png" alt="LinkedIn" width="15px"><a href="https://www.linkedin.com/in/igorbarbosaws/" target="_blank">/igorbarbosaws</a></li>
         <li><img src="imagens/github.png" alt="GitHub" width="15px"><a href="https://github.com/igorbarbosaws" target="_blank">/igorbarbosaws</a></li>
     </ul>
-    <p>Agradeço pela visita! Se preferir, pode entrar em contato através do meu email 👉<a href="mailto:igorbarbosaws@gmail.com">📧</a>. <br> Estou sempre aberto a novas conexões e oportunidades. Sinta-se à vontade para me contatar!</p>
+    <p>Agradeço pela visita! Se preferir, pode entrar em contato através do meu e-mail, 👉<a href="mailto:igorbarbosaws@gmail.com">📧</a>. <br> Estou sempre aberto a novas conexões e oportunidades. Sinta-se à vontade para me contatar!</p>
 </body>
 
 </html>
+
